--- a/pug/src/views/historial.pug
+++ b/pug/src/views/historial.pug
@@ -2,6 +2,6 @@ html
     include head.pug
     include header.pug
     body
-        h2(class="d-block mx-auto my-3 text-center") Historial
+        h2(class="d-block mx-auto my-3 text-center") Historial - PUG
         include dataTable.pug
         include footer.pug 
