--- a/pug/src/views/formulario.pug
+++ b/pug/src/views/formulario.pug
@@ -1,5 +1,5 @@
 div(class="form-group col-4 mx-auto my-3 w-25 border p-3")
-    form(action="/index" method="post" enctype="multipart/form-data")
+    form(action="/index" method="POST")
         fieldset
             h4(class="d-block mx-auto my-2 text-center") New Product
             label(for="title" Title)
