--- a/pug/src/views/index.pug
+++ b/pug/src/views/index.pug
@@ -2,7 +2,7 @@ html
     include head.pug
     include header.pug
     body
-        h2(class="d-block mx-auto my-3 text-center") Carga Productos
+        h2(class="d-block mx-auto my-3 text-center") Carga Productos - PUG
         include formulario.pug
         br
         div(class="d-block mx-auto text-center")
