Desafio 5 - German Montalbetti - CH - 27-9-2022

--- a/handleBars/views/partials/header.hbs
+++ b/handleBars/views/partials/header.hbs
@@ -1,8 +1,9 @@
 <header>
   <nav class="navbar sticky-top navbar-dark bg-dark">
     <div class="container-fluid px-2 my-2">
-      <a class="navbar-brand mx-2" href="/index">ACME Inc.
-      <img src='http://localhost:4000/LogoACME.jpg' width="50" height="30" class="d-inline-block align-text-top"></a>
+      <a class="navbar-brand mx-2" href="/index"> ACME Inc. 
+      <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQV7z3rvezMnauvOF3lXX4UFr8LsmmeOG_A0J1O-W4KShuj8OjNAURmQeyiGnMw6WdYJK0&usqp=CAU'
+        width="30" height="24" class="d-inline-block align-text-top"></a>
       <div class="me-auto d-block" id="navbarTogglerDemo02">
         <ul class="navbar-nav my-auto list-group list-group-horizontal">
           <li class="nav-item mx-4 active">
