--- a/pug/src/views/header.pug
+++ b/pug/src/views/header.pug
@@ -1,8 +1,8 @@
 header
     nav(class="navbar sticky-top navbar-dark bg-dark w-100")
         div(class="container-fluid px-2 my-2")
-            a(class="navbar-brand mx-2" href="/index") ACME Inc.
-              img(src='https://static.wikia.nocookie.net/looneytunes/images/5/56/Comp_2.jpg/revision/latest?cb=20121102161419' alt="Logo ACME" width="30" height="24" class="d-inline-block align-text-top")
+            a(class="navbar-brand mx-2" href="/index") ACME Inc. 
+              img(src='http://localhost:8080/LogoACME.jpg' width="50" height="30" class="d-inline-block align-text-top")
             div(class="me-auto d-block" id="navbarTogglerDemo02")
               ul(class="navbar-nav my-auto list-group list-group-horizontal")
                 li(class="nav-item mx-4 active")
